refactor: replace all files of no functional impact

--- a/notebook/baseapi.ipynb
+++ b/notebook/baseapi.ipynb
@@ -21,7 +21,7 @@
     "from requests.auth import HTTPBasicAuth\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from vook_db_v7.local_config import BASE_CLIENT_ID, BASE_CLIENT_SECRET"
+    "from vook_db_lambda.local_config import BASE_CLIENT_ID, BASE_CLIENT_SECRET"
    ]
   },
   {
