--- a/notebook/check_df_bulk_interface.ipynb
+++ b/notebook/check_df_bulk_interface.ipynb
@@ -12,7 +12,7 @@
     "os.chdir(\"../\")\n",
     "import pandas as pd\n",
     "\n",
-    "from vook_db_v7.utils import (\n",
+    "from vook_db_lambda.utils import (\n",
     "    DataFrame_maker_rakuten,\n",
     "    DataFrame_maker_yahoo,\n",
     "    create_api_input,\n",
