--- a/notebook/check_src_equality.ipynb
+++ b/notebook/check_src_equality.ipynb
@@ -31,7 +31,7 @@
     "import urllib\n",
     "from time import sleep\n",
     "\n",
-    "from vook_db_v7.local_config import CLIENT_ME, ClientId, aff_id, pid, sid"
+    "from vook_db_lambda.local_config import CLIENT_ME, ClientId, aff_id, pid, sid"
    ]
   },
   {
@@ -113,7 +113,7 @@
     "\n",
     "def get_knowledges():\n",
     "    config_ec2 = get_ec2_config()\n",
-    "    query = read_sql_file(\"../vook_db_v7/sql/knowledges.sql\")\n",
+    "    query = read_sql_file(\"../vook_db_lambda/sql/knowledges.sql\")\n",
     "    df_from_db = pd.DataFrame()\n",
     "    with SSHTunnelForwarder(\n",
     "        (config_ec2[\"host_name\"], config_ec2[\"ec2_port\"]),\n",
