--- a/notebook/exclude_noise.ipynb
+++ b/notebook/exclude_noise.ipynb
@@ -23,10 +23,10 @@
     "import pandas as pd\n",
     "from sshtunnel import SSHTunnelForwarder\n",
     "\n",
-    "from vook_db_v7.exclude_noise import product_line_judge, product_noise_judge\n",
-    "from vook_db_v7.local_config import get_ec2_config\n",
-    "from vook_db_v7.rds_handler import get_knowledges\n",
-    "from vook_db_v7.utils import (\n",
+    "from vook_db_lambda.exclude_noise import product_line_judge, product_noise_judge\n",
+    "from vook_db_lambda.local_config import get_ec2_config\n",
+    "from vook_db_lambda.rds_handler import get_knowledges\n",
+    "from vook_db_lambda.utils import (\n",
     "    DataFrame_maker_rakuten,\n",
     "    DataFrame_maker_yahoo,\n",
     "    create_api_input,\n",
