--- a/notebook/exclude_noise_not_include_knowledge.ipynb
+++ b/notebook/exclude_noise_not_include_knowledge.ipynb
@@ -21,8 +21,8 @@
     "os.chdir(\"..\")  # notebookディレクトリの1つ上に移動\n",
     "import pandas as pd\n",
     "\n",
-    "from vook_db_v7.rds_handler import get_knowledges\n",
-    "from vook_db_v7.utils import (\n",
+    "from vook_db_lambda.rds_handler import get_knowledges\n",
+    "from vook_db_lambda.utils import (\n",
     "    DataFrame_maker_rakuten,\n",
     "    DataFrame_maker_yahoo,\n",
     "    create_api_input,\n",
