--- a/notebook/rakuten_animeTshirts_prices_v2.ipynb
+++ b/notebook/rakuten_animeTshirts_prices_v2.ipynb
@@ -86,7 +86,7 @@
     "import pandas as pd\n",
     "import requests\n",
     "from tqdm import tqdm\n",
-    "from vook_db_v7.config import MAX_PAGE, REQ_URL, WANT_ITEMS_RAKUTEN, req_params"
+    "from vook_db_lambda.config import MAX_PAGE, REQ_URL, WANT_ITEMS_RAKUTEN, req_params"
    ]
   },
   {
