--- a/notebook/rakuten_bandTshirts_prices_v2.ipynb
+++ b/notebook/rakuten_bandTshirts_prices_v2.ipynb
@@ -87,7 +87,7 @@
     "import requests\n",
     "from tqdm import tqdm\n",
     "\n",
-    "from vook_db_v7.config import MAX_PAGE, REQ_URL, WANT_ITEMS_RAKUTEN, req_params"
+    "from vook_db_lambda.config import MAX_PAGE, REQ_URL, WANT_ITEMS_RAKUTEN, req_params"
    ]
   },
   {
